--- a/src/assets/admin/layout2/css/themes/glassomorphism-dark.css
+++ b/src/assets/admin/layout2/css/themes/glassomorphism-dark.css
@@ -4285,9 +4285,6 @@ color: #fff !important;
       border-radius: 8px 8px 0px 0px !important;
   
     }
-    .clip_mask{
-      bottom: -77px!important;
-    }
   }
 
 /* add a tag */
@@ -4335,5 +4332,10 @@ color: #fff !important;
 .btn_reset:hover {
   background: #e87e04 !important;
   color: #fff !important;
+}
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+  .clip_mask{
+      bottom: -67px !important;
+  }
 }
 
