--- a/src/assets/admin/layout2/css/themes/glassomorphism-light.css
+++ b/src/assets/admin/layout2/css/themes/glassomorphism-light.css
@@ -4600,4 +4600,8 @@ color: #fff!important;
   background: #e87e04 !important;
   color: #fff !important;
 }
-
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+  .clip_mask{
+      bottom: -67px !important;
+  }
+}
